[WIP] Support other annotations
* Flesh out wider annotation support
* Use more Optional(s)
* Use String IDs (instead of URIs)
* Reduce use of convenience methods
* Create a BehaviorList with validation